# findmkl_openmeeg

./: .appveyor.yml  .travis.yml  CMakeLists.txt  OpenMEEGConfigure.h.in  README.md
OpenMEEG/: CMakeLists.txt
OpenMEEG/include/: operators.h
OpenMEEG/src/: CMakeLists.txt
OpenMEEGMaths/: CMakeLists.txt
OpenMEEGMaths/apps/: CMakeLists.txt  OpenMEEG_Export.h
OpenMEEGMaths/include/BlasLapackImplementations/: FortranCInterface.h  OpenMEEGMathsAtlasConfig.h  OpenMEEGMathsvecLibConfig.h
OpenMEEGMaths/src/: CMakeLists.txt  matrix.cpp
OpenMEEGMaths/tests/: CMakeLists.txt  test_mat_files_io.cpp
apps/: CMakeLists.txt
apps/tools/: CMakeLists.txt
cmake/: CheckCXXFeatures.cmake  FindCppCheck.cmake  FindMKL.cmake  Findmatio.cmake  NewExecutable.cmake  Packaging.cmake  analysis.cmake  install.cmake  options.cmake  thirdParties.cmake
cmake/utils/cxx_tests/: isnormal_in_namespace_std.cpp
